kubernetes/kerberos-vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: kerberos/vault:1.0.882646955
        #imagePullPolicy: Always
        resources:
          limits:
            memory: 2048Mi
            cpu: 2000m
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vault-lb
  labels:
    app: vault
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  selector:
    app: vault
