kubernetes/kerberos-vault/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  selector:
    app: vault
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  annotations:
    kubernetes.io/ingress.class: traefik
    #kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/proxy-body-size: 200m # This might throw a 413 Entity Too Large when uploading large recordings.
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  #tls:
  #- hosts:
    #- vault.domain.com
    #secretName: factory-tls
  rules:
    - host: vault.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 80
